--- a/package.json
+++ b/package.json
@@ -11,26 +11,28 @@
   },
   "author": "MOCODING, LLC",
   "license": "MIT",
-  "dependencies": {
-    "bootstrap": "4.0.0-alpha.6",
-    "browser-assert": "^1.2.1",    
-    "moment": "2.18.1",
-    "react": "15.6.1",
-    "react-dom": "15.6.1",
+  "dependencies": {    
+    "react": "16.0.0",
+    "react-dom": "16.0.0",
     "react-helmet": "5.1.3",
     "react-redux": "5.0.6",
     "react-router-dom": "4.1.2",
-    "react-router-redux": "5.0.0-alpha.6",
+    "react-router-redux": "5.0.0-alpha.6",   
+    "redux": "3.7.2",    
+    "redux-logger": "3.0.6",    
     "react-transition-group": "2.2.0",
-    "reactstrap": "4.8.0",
-    "redux": "3.7.2",
-    "redux-automata": "1.1.2",
-    "redux-logger": "3.0.6"
+    "reactstrap": "5.0.0-alpha.2",    
+    "bootstrap": "4.0.0-beta",
+    "browser-assert": "1.2.1",    
+    "moment": "2.18.1",
+    "applicationinsights-js": "1.0.12",
+    "redux-automata": "2.0.0-beta5"
   },
   "devDependencies": {
+    "@types/applicationinsights-js": "1.0.4",
     "@types/extract-text-webpack-plugin": "2.1.0",
-    "@types/react": "15.0.39",
-    "@types/react-dom": "15.5.1",
+    "@types/react": "16.0.7",
+    "@types/react-dom": "15.5.5",
     "@types/react-helmet": "5.0.3",
     "@types/react-hot-loader": "3.0.3",
     "@types/react-redux": "4.4.47",
@@ -43,10 +45,13 @@
     "aspnet-prerendering": "3.0.1",
     "aspnet-webpack": "2.0.1",
     "aspnet-webpack-react": "3.0.0",
+    "autobind-decorator": "2.1.0",
     "node-noop": "1.0.0",
     "nswag": "11.3.4",
     "react-hot-loader": "3.0.0-beta.7",
     "ts-node": "3.3.0",
+    "tslint": "5.7.0",
+    "tslint-react": "3.2.0",
     "typescript": "2.4.2",
     "webpack-hot-middleware": "2.18.2",
     "webpack-typescript-builder": "1.0.6"
