Upgraded to yarn.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Single Page Application Template",
   "main": "index.js",
   "scripts": {
-    "build": "npm run build:vendors && npm run build:app",
+    "build": "yarn build:vendors && yarn build:app",
     "build:vendors": "webpack --config build/webpack.config.vendors.ts",
     "build:app": "webpack --config build/webpack.config.ts",
     "update-api": "nswag swagger2tsclient /Input:http://localhost:5000/api/$spec /Output:src/app/api/ApiClient.generated.ts TypeScriptVersion:2.0 /Template:Fetch /WrapDtoExceptions:true /TypeStyle:Interface /GenerateClientInterfaces:true /DateTimeType:MomentJS"
@@ -12,48 +12,48 @@
   "author": "MOCODING, LLC",
   "license": "MIT",
   "dependencies": {
-    "applicationinsights-js": "1.0.12",
+    "applicationinsights-js": "1.0.13",
     "autobind-decorator": "2.1.0",
     "bootstrap": "4.0.0-beta",
     "browser-assert": "1.2.1",
-    "moment": "2.18.1",
+    "moment": "2.19.1",
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-helmet": "5.2.0",
     "react-redux": "5.0.6",
-    "react-router-dom": "4.1.2",
+    "react-router-dom": "4.2.2",
     "react-router-redux": "5.0.0-alpha.6",
     "react-transition-group": "2.2.1",
-    "reactstrap": "5.0.0-alpha.2",
+    "reactstrap": "5.0.0-alpha.3",
     "redux": "3.7.2",
     "redux-automata": "2.0.0",
     "redux-logger": "3.0.6"
   },
   "devDependencies": {
     "@types/applicationinsights-js": "1.0.4",
-    "@types/extract-text-webpack-plugin": "2.1.0",
+    "@types/extract-text-webpack-plugin": "3.0.0",
     "@types/react": "16.0.7",
-    "@types/react-dom": "15.5.5",
+    "@types/react-dom": "16.0.1",
     "@types/react-helmet": "5.0.3",
     "@types/react-hot-loader": "3.0.4",
-    "@types/react-redux": "5.0.9",
+    "@types/react-redux": "5.0.10",
     "@types/react-router-dom": "4.0.8",
     "@types/react-router-redux": "5.0.8",
-    "@types/reactstrap": "4.6.1",
+    "@types/reactstrap": "4.6.4",
     "@types/redux-logger": "3.0.4",
-    "@types/webpack": "3.0.12",
+    "@types/webpack": "3.0.13",
     "@types/webpack-env": "1.13.1",
     "aspnet-prerendering": "3.0.1",
     "aspnet-webpack": "2.0.1",
     "aspnet-webpack-react": "3.0.0",
     "node-noop": "1.0.0",
-    "nswag": "11.8.3",
-    "react-hot-loader": "3.0.0-beta.7",
+    "nswag": "11.9.3",
+    "react-hot-loader": "3.0.0",
     "ts-node": "3.3.0",
     "tslint": "5.7.0",
     "tslint-react": "3.2.0",
     "typescript": "2.5.3",
     "webpack-hot-middleware": "2.19.1",
-    "webpack-typescript-builder": "1.0.11"
+    "webpack-typescript-builder": "1.0.12"
   }
 }
