--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "MOCODING, LLC",
   "license": "MIT",
   "dependencies": {
-    "applicationinsights-js": "1.0.13",
+    "applicationinsights-js": "1.0.14",
     "autobind-decorator": "2.1.0",
     "bootstrap": "4.0.0-beta",
     "browser-assert": "1.2.1",
@@ -26,34 +26,34 @@
     "react-transition-group": "2.2.1",
     "reactstrap": "5.0.0-alpha.3",
     "redux": "3.7.2",
-    "redux-automata": "2.0.0",
+    "redux-automata": "2.1.1",
     "redux-logger": "3.0.6"
   },
   "devDependencies": {
     "@types/applicationinsights-js": "1.0.4",
     "@types/extract-text-webpack-plugin": "3.0.0",
-    "@types/react": "16.0.7",
-    "@types/react-dom": "16.0.1",
+    "@types/react": "16.0.19",
+    "@types/react-dom": "16.0.2",
     "@types/react-helmet": "5.0.3",
-    "@types/react-hot-loader": "3.0.4",
-    "@types/react-redux": "5.0.10",
-    "@types/react-router-dom": "4.0.8",
+    "@types/react-hot-loader": "3.0.5",
+    "@types/react-redux": "5.0.12",
+    "@types/react-router-dom": "4.2.0",
     "@types/react-router-redux": "5.0.8",
-    "@types/reactstrap": "4.6.4",
-    "@types/redux-logger": "3.0.4",
-    "@types/webpack": "3.0.13",
+    "@types/reactstrap": "4.6.5",
+    "@types/redux-logger": "3.0.5",
+    "@types/webpack": "3.0.14",
     "@types/webpack-env": "1.13.2",
     "aspnet-prerendering": "3.0.1",
     "aspnet-webpack": "2.0.1",
     "aspnet-webpack-react": "3.0.0",
     "node-noop": "1.0.0",
-    "nswag": "11.10.0",
+    "nswag": "11.11.3",
     "react-hot-loader": "3.1.1",
     "ts-node": "3.3.0",
-    "tslint": "5.7.0",
+    "tslint": "5.8.0",
     "tslint-react": "3.2.0",
     "typescript": "2.5.3",
     "webpack-hot-middleware": "2.20.0",
-    "webpack-typescript-builder": "1.0.12"
+    "webpack-typescript-builder": "1.1.0-ts-loader2"
   }
 }
