--- a/package.json
+++ b/package.json
@@ -54,6 +54,6 @@
     "tslint-react": "3.2.0",
     "typescript": "2.5.3",
     "webpack-hot-middleware": "2.20.0",
-    "webpack-typescript-builder": "1.1.0-ts-loader2"
+    "webpack-typescript-builder": "1.2.0"
   }
 }
