--- a/package.json
+++ b/package.json
@@ -12,48 +12,48 @@
   "author": "MOCODING, LLC",
   "license": "MIT",
   "dependencies": {
-    "applicationinsights-js": "1.0.14",
+    "applicationinsights-js": "1.0.15",
     "autobind-decorator": "2.1.0",
-    "bootstrap": "4.0.0-beta",
+    "bootstrap": "4.0.0",
     "browser-assert": "1.2.1",
-    "moment": "2.20.1",
+    "moment": "2.21.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-helmet": "5.2.0",
-    "react-redux": "5.0.6",
+    "react-redux": "5.0.7",
     "react-router-dom": "4.2.2",
-    "react-router-redux": "5.0.0-alpha.6",
+    "react-router-redux": "5.0.0-alpha.9",
     "react-transition-group": "2.2.1",
-    "reactstrap": "5.0.0-alpha.4",
+    "reactstrap": "5.0.0-beta.3",
     "redux": "3.7.2",
-    "redux-automata": "2.1.1",
+    "redux-automata": "2.2.0",
     "redux-logger": "3.0.6"
   },
   "devDependencies": {
     "@types/applicationinsights-js": "1.0.5",
-    "@types/extract-text-webpack-plugin": "3.0.0",
-    "@types/react": "16.0.31",
-    "@types/react-dom": "16.0.3",
-    "@types/react-helmet": "5.0.3",
-    "@types/react-hot-loader": "3.0.5",
-    "@types/react-redux": "5.0.14",
-    "@types/react-router-dom": "4.2.3",
-    "@types/react-router-redux": "5.0.10",
-    "@types/reactstrap": "5.0.6",
+    "@types/extract-text-webpack-plugin": "3.0.2",
+    "@types/react": "16.0.40",
+    "@types/react-dom": "16.0.4",
+    "@types/react-helmet": "5.0.5",
+    "@types/react-hot-loader": "3.0.6",
+    "@types/react-redux": "5.0.15",
+    "@types/react-router-dom": "4.2.5",
+    "@types/react-router-redux": "5.0.12",
+    "@types/reactstrap": "5.0.20",
     "@types/redux-logger": "3.0.5",
-    "@types/webpack": "3.8.1",
-    "@types/webpack-env": "1.13.3",
+    "@types/webpack": "4.1.1",
+    "@types/webpack-env": "1.13.5",
     "aspnet-prerendering": "3.0.1",
-    "aspnet-webpack": "2.0.1",
+    "aspnet-webpack": "2.0.3",
     "aspnet-webpack-react": "3.0.0",
     "node-noop": "1.0.0",
-    "nswag": "11.12.16",
-    "react-hot-loader": "3.1.3",
-    "ts-node": "4.0.2",
+    "nswag": "11.16.0",
+    "react-hot-loader": "4.0.0",
+    "ts-node": "5.0.1",
     "tslint": "5.8.0",
     "tslint-react": "3.2.0",
-    "typescript": "2.6.2",
-    "webpack-hot-middleware": "2.21.0",
+    "typescript": "2.7.2",
+    "webpack-hot-middleware": "2.21.2",
     "webpack-typescript-builder": "1.2.5"
   }
 }
