--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   "license": "MIT",
   "dependencies": {
     "@types/applicationinsights-js": "1.0.5",
-    "@types/extract-text-webpack-plugin": "3.0.2",
-    "@types/react": "16.3.13",
-    "@types/react-dom": "16.0.5",
+    "@types/extract-text-webpack-plugin": "3.0.3",
+    "@types/react": "16.3.16",
+    "@types/react-dom": "16.0.6",
     "@types/react-helmet": "5.0.6",
     "@types/react-hot-loader": "3.0.6",
-    "@types/react-redux": "5.0.19",
-    "@types/react-router-dom": "4.2.6",
-    "@types/react-router-redux": "5.0.13",
-    "@types/reactstrap": "5.0.24",
+    "@types/react-redux": "6.0.2",
+    "@types/react-router-dom": "4.2.7",
+    "@types/react-router-redux": "5.0.15",
+    "@types/reactstrap": "5.0.27",
     "@types/redux-logger": "3.0.6",
     "@types/webpack": "4.1.4",
     "@types/webpack-env": "1.13.6",
@@ -29,29 +29,30 @@
     "autobind-decorator": "2.1.0",
     "bootstrap": "4.1.1",
     "browser-assert": "1.2.1",
-    "moment": "2.22.1",
-    "react": "16.3.2",
-    "react-dom": "16.3.2",
+    "moment": "2.22.2",
+    "react": "16.4.0",
+    "react-dom": "16.4.0",
     "react-helmet": "5.2.0",
     "react-redux": "5.0.7",
     "react-router-dom": "4.2.2",
     "react-router-redux": "5.0.0-alpha.9",
     "react-transition-group": "2.3.1",
-    "reactstrap": "6.0.1",
+    "reactstrap": "6.1.0",
     "redux": "4.0.0",
     "redux-automata": "2.4.1",
-    "redux-logger": "3.0.6",    
+    "redux-logger": "3.0.6",
     "aspnet-prerendering": "3.0.1",
-    "aspnet-webpack": "2.0.3",
+    "aspnet-webpack": "3.0.0",
     "aspnet-webpack-react": "3.0.0",
     "node-noop": "1.0.0",
-    "nswag": "11.17.3",
-    "react-hot-loader": "4.1.2",
-    "ts-node": "6.0.2",
+    "nswag": "11.17.12",
+    "react-hot-loader": "4.3.0",
+    "ts-node": "6.1.0",
     "tslint": "5.8.0",
-    "tslint-react": "3.5.1",
-    "typescript": "2.8.3",
-    "webpack-hot-middleware": "2.22.1",
+    "tslint-react": "3.6.0",
+    "typescript": "2.9.1",
+    "webpack-hot-middleware": "2.22.2",
+    "webpack-dev-middleware": "3.1.3",
     "webpack-typescript-builder": "2.0.1"
   }
 }
