--- a/package.json
+++ b/package.json
@@ -12,47 +12,47 @@
   "author": "MOCODING, LLC",
   "license": "MIT",
   "dependencies": {
-    "@types/applicationinsights-js": "1.0.5",
+    "@types/applicationinsights-js": "1.0.7",
     "@types/extract-text-webpack-plugin": "3.0.3",
-    "@types/react": "16.4.6",
-    "@types/react-dom": "16.0.6",
-    "@types/react-helmet": "5.0.6",
-    "@types/react-hot-loader": "3.0.6",
-    "@types/react-redux": "6.0.3",
-    "@types/react-router-dom": "4.2.7",
-    "@types/react-router-redux": "5.0.15",
-    "@types/reactstrap": "6.0.0",
+    "@types/react": "16.4.13",
+    "@types/react-dom": "16.0.9",
+    "@types/react-helmet": "5.0.7",
+    "@types/react-hot-loader": "4.1.0",
+    "@types/react-redux": "6.0.9",
+    "@types/react-router-dom": "4.3.1",
+    "@types/react-router-redux": "5.0.16",
+    "@types/reactstrap": "6.4.2",
     "@types/redux-logger": "3.0.6",
-    "@types/webpack": "4.4.5",
+    "@types/webpack": "4.4.17",
     "@types/webpack-env": "1.13.6",
-    "applicationinsights-js": "1.0.18",
+    "applicationinsights-js": "1.0.20",
     "autobind-decorator": "2.1.0",
-    "bootstrap": "4.1.1",
+    "bootstrap": "4.1.3",
     "browser-assert": "1.2.1",
     "moment": "2.22.2",
-    "react": "16.4.1",
-    "react-dom": "16.4.1",
+    "react": "16.5.2",
+    "react-dom": "16.5.2",
     "react-helmet": "5.2.0",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
     "react-router-redux": "5.0.0-alpha.9",
-    "react-transition-group": "2.4.0",
-    "reactstrap": "6.2.0",
-    "redux": "4.0.0",
+    "react-transition-group": "2.5.0",
+    "reactstrap": "6.5.0",
+    "redux": "4.0.1",
     "redux-automata": "2.5.0",
     "redux-logger": "3.0.6",
     "aspnet-prerendering": "3.0.1",
     "aspnet-webpack": "3.0.0",
-    "aspnet-webpack-react": "3.0.0",
+    "aspnet-webpack-react": "4.0.0",
     "node-noop": "1.0.0",
-    "nswag": "11.17.19",
-    "react-hot-loader": "4.3.3",
-    "ts-node": "7.0.0",
-    "tslint": "5.8.0",
+    "nswag": "11.20.1",
+    "react-hot-loader": "4.3.11",
+    "ts-node": "7.0.1",
+    "tslint": "5.11.0",
     "tslint-react": "3.6.0",
-    "typescript": "2.9.2",
-    "webpack-hot-middleware": "2.22.2",
-    "webpack-dev-middleware": "3.1.3",
-    "webpack-typescript-builder": "2.0.2"
+    "typescript": "3.1.3",
+    "webpack-hot-middleware": "2.24.3",
+    "webpack-dev-middleware": "3.4.0",
+    "webpack-typescript-builder": "file:../webpack-typescript-builder/webpack-typescript-builder-2.0.4.tgz"
   }
 }
