--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "yarn build:vendors && yarn build:app",
-    "build:vendors": "webpack --config build/webpack.config.vendors.ts",
-    "build:app": "webpack --config build/webpack.config.ts",
+    "build:vendors": "webpack --progress --config build/webpack.config.vendors.ts",
+    "build:app": "webpack --progress --config build/webpack.config.ts",
     "update-api": "nswag swagger2tsclient /Input:http://localhost:5000/api/$spec /Output:src/app/api/ApiClient.generated.ts TypeScriptVersion:2.0 /Template:Fetch /WrapDtoExceptions:true /TypeStyle:Interface /GenerateClientInterfaces:true /DateTimeType:MomentJS"
   },
   "author": "MOCODING, LLC",
@@ -23,7 +23,7 @@
     "@types/react-router-redux": "5.0.16",
     "@types/reactstrap": "6.4.2",
     "@types/redux-logger": "3.0.6",
-    "@types/webpack": "4.4.17",
+    "@types/webpack": "4.4.19",
     "@types/webpack-env": "1.13.6",
     "applicationinsights-js": "1.0.20",
     "autobind-decorator": "2.1.0",
@@ -50,9 +50,9 @@
     "ts-node": "7.0.1",
     "tslint": "5.11.0",
     "tslint-react": "3.6.0",
-    "typescript": "3.1.3",
+    "typescript": "3.1.6",
     "webpack-hot-middleware": "2.24.3",
     "webpack-dev-middleware": "3.4.0",
-    "webpack-typescript-builder": "2.0.4"
+    "webpack-typescript-builder": "2.0.5"
   }
 }
