--- a/package.json
+++ b/package.json
@@ -5,54 +5,53 @@
   "main": "index.js",
   "scripts": {
     "build": "yarn build:vendors && yarn build:app",
-    "build:vendors": "webpack --progress --config build/webpack.config.vendors.ts",
-    "build:app": "webpack --progress --config build/webpack.config.ts",
+    "build:vendors": "webpack --config build/webpack.config.vendors.ts",
+    "build:app": "webpack --config build/webpack.config.ts",
     "update-api": "nswag swagger2tsclient /Input:http://localhost:5000/api/$spec /Output:src/app/api/ApiClient.generated.ts TypeScriptVersion:2.0 /Template:Fetch /WrapDtoExceptions:true /TypeStyle:Interface /GenerateClientInterfaces:true /DateTimeType:MomentJS"
   },
   "author": "MOCODING, LLC",
   "license": "MIT",
   "dependencies": {
-    "@types/applicationinsights-js": "1.0.7",
-    "@types/extract-text-webpack-plugin": "3.0.3",
-    "@types/react": "16.7.6",
-    "@types/react-dom": "16.0.9",
+    "@types/applicationinsights-js": "1.0.9",
+    "@types/react": "16.7.17",
+    "@types/react-dom": "16.0.11",
     "@types/react-helmet": "5.0.7",
     "@types/react-hot-loader": "4.1.0",
-    "@types/react-redux": "6.0.9",
+    "@types/react-redux": "6.0.11",
     "@types/react-router-dom": "4.3.1",
-    "@types/react-router-redux": "5.0.16",
-    "@types/reactstrap": "6.4.2",
+    "@types/react-router-redux": "5.0.17",
+    "@types/reactstrap": "6.4.3",
     "@types/redux-logger": "3.0.6",
-    "@types/webpack": "4.4.19",
+    "@types/webpack": "4.4.21",
     "@types/webpack-env": "1.13.6",
     "applicationinsights-js": "1.0.20",
-    "autobind-decorator": "2.1.0",
+    "autobind-decorator": "2.4.0",
     "bootstrap": "4.1.3",
     "browser-assert": "1.2.1",
-    "moment": "2.22.2",
-    "react": "16.5.2",
-    "react-dom": "16.5.2",
+    "moment": "2.23.0",
+    "react": "16.6.3",
+    "react-dom": "16.6.3",
     "react-helmet": "5.2.0",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
     "react-router-redux": "5.0.0-alpha.9",
-    "react-transition-group": "2.5.0",
+    "react-transition-group": "2.5.1",
     "reactstrap": "6.5.0",
     "redux": "4.0.1",
-    "redux-automata": "2.5.0",
+    "redux-automata": "2.5.1",
     "redux-logger": "3.0.6",
     "aspnet-prerendering": "3.0.1",
     "aspnet-webpack": "3.0.0",
     "aspnet-webpack-react": "4.0.0",
     "node-noop": "1.0.0",
-    "nswag": "11.20.1",
-    "react-hot-loader": "4.3.11",
+    "nswag": "12.0.7",
+    "react-hot-loader": "4.6.1",
     "ts-node": "7.0.1",
     "tslint": "5.11.0",
     "tslint-react": "3.6.0",
-    "typescript": "3.1.6",
+    "typescript": "3.2.2",
     "webpack-hot-middleware": "2.24.3",
     "webpack-dev-middleware": "3.4.0",
-    "webpack-typescript-builder": "2.0.5"
+    "webpack-typescript-builder": "3.0.0-beta"
   }
 }
