Migrated to react-redux 6.0

--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@types/react-helmet": "5.0.7",
     "@types/react-hot-loader": "4.1.0",
     "@types/react-redux": "6.0.11",
-    "@types/react-router-dom": "4.3.1",
-    "@types/react-router-redux": "5.0.17",
+    "@types/react-router-dom": "4.3.1",    
     "@types/reactstrap": "6.4.3",
     "@types/redux-logger": "3.0.6",
     "@types/webpack": "4.4.21",
@@ -32,9 +31,9 @@
     "react": "16.6.3",
     "react-dom": "16.6.3",
     "react-helmet": "5.2.0",
-    "react-redux": "5.0.7",
+    "react-redux": "6.0.0",
     "react-router-dom": "4.3.1",
-    "react-router-redux": "5.0.0-alpha.9",
+    "connected-react-router": "6.0.0",
     "react-transition-group": "2.5.1",
     "reactstrap": "6.5.0",
     "redux": "4.0.1",
