--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "@types/applicationinsights-js": "1.0.9",
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
-    "@types/react-helmet": "5.0.8",
+    "@types/react-helmet": "5.0.8",    
     "@types/react-hot-loader": "4.1.0",
+    "@types/react-loadable": "5.5.1",
     "@types/react-redux": "7.0.9",
     "@types/react-router-dom": "4.3.3",
     "@types/reactstrap": "8.0.1",
-    "@types/redux-logger": "3.0.7",
+    "@types/redux-logger": "3.0.7",    
     "@types/webpack": "4.4.32",
     "@types/webpack-env": "1.13.9",
     "applicationinsights-js": "1.0.20",
@@ -31,6 +32,7 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-helmet": "5.2.1",
+    "react-loadable": "5.5.0",
     "react-redux": "7.0.3",
     "react-router-dom": "5.0.1",
     "connected-react-router": "6.4.0",
