--- a/package.json
+++ b/package.json
@@ -1,56 +1,34 @@
 {
   "name": "spa-template",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Single Page Application Template",
   "main": "index.js",
   "scripts": {
-    "build": "yarn build:vendors && yarn build:app",
-    "build:vendors": "webpack --config build/webpack.config.vendors.ts",
-    "build:app": "webpack --config build/webpack.config.ts",
-    "update-api": "nswag swagger2tsclient /Input:http://localhost:5000/api/$spec /Output:src/app/api/ApiClient.generated.ts TypeScriptVersion:2.0 /Template:Fetch /WrapDtoExceptions:true /TypeStyle:Interface /GenerateClientInterfaces:true /DateTimeType:MomentJS"
+    "start": "moapp serve ",
+    "build": "moapp build -p",
+    "update-api": "nswag swagger2tsclient /runtime:NetCore31 /Input:'http://localhost:5000/api/\\$spec' /Output:src/app/api/api-client.generated.ts TypeScriptVersion:2.0 /Template:Fetch /WrapDtoExceptions:true /TypeStyle:Interface /GenerateClientInterfaces:true"
   },
   "author": "MOCODING, LLC",
   "license": "MIT",
-  "dependencies": {
-    "@types/applicationinsights-js": "1.0.9",
-    "@types/react": "16.8.19",
-    "@types/react-dom": "16.8.4",
-    "@types/react-helmet": "5.0.8",
-    "@types/react-hot-loader": "4.1.0",
-    "@types/react-redux": "7.0.9",
-    "@types/react-router-dom": "4.3.3",
-    "@types/reactstrap": "8.0.1",
-    "@types/redux-logger": "3.0.7",
-    "@types/webpack": "4.4.32",
-    "@types/webpack-env": "1.13.9",
-    "applicationinsights-js": "1.0.20",
-    "autobind-decorator": "2.4.0",
-    "bootstrap": "4.3.1",
-    "browser-assert": "1.2.1",
-    "moment": "2.24.0",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-helmet": "5.2.1",
-    "react-redux": "7.0.3",
-    "react-router-dom": "5.0.1",
-    "connected-react-router": "6.4.0",
-    "react-transition-group": "4.1.0",
-    "reactstrap": "8.0.0",
-    "redux": "4.0.1",
-    "redux-automata": "2.5.2",
-    "redux-logger": "3.0.6",
-    "aspnet-prerendering": "3.0.1",
-    "aspnet-webpack": "3.0.0",
-    "aspnet-webpack-react": "4.0.0",
-    "node-noop": "1.0.0",
-    "nswag": "12.3.1",
-    "react-hot-loader": "4.9.0",
-    "ts-node": "8.2.0",
-    "tslint": "5.17.0",
-    "tslint-react": "4.0.0",
-    "typescript": "3.5.1",
-    "webpack-hot-middleware": "2.25.0",
-    "webpack-dev-middleware": "3.7.0",
-    "webpack-typescript-builder": "3.0.2"
+  "devDependencies": {
+    "@mocoding/react-app-router-redux-async": "^1.0.0",
+    "@mocoding/react-app": "^1.0.0",
+    "@types/applicationinsights-js": "^1.0.9",
+    "@types/reactstrap": "^8.4.2",
+    "applicationinsights-js": "^1.0.21",
+    "autobind-decorator": "^2.4.0",
+    "bootstrap": "^4.4.1",
+    "moment": "^2.25.3",
+    "nswag": "^13.5.0",
+    "reactstrap": "^8.4.1",
+    "redux-automata": "^2.6.1"
+  },
+  "eslintConfig": {
+    "extends": "@mocoding/eslint-config"
+  },
+  "prettier": "@mocoding/eslint-config/prettier",
+  "moapp": {
+    "appEntry": "src/app",
+    "bootstrapModule": "@mocoding/react-app-router-redux-async"
   }
 }
