--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,9 +1,10 @@
-{  
-  "profiles": {    
+{
+  "profiles": {
     "spa-template": {
       "commandName": "Project",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "API_URL": "http://0.0.0.0:5000"
       }
     }
   }
