--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
   "scripts": {
     "start": "moapp serve ",
     "build": "moapp build -p",
-    "update-api": "nswag swagger2tsclient /runtime:NetCore31 /Input:'http://localhost:5000/api/\\$spec' /Output:src/app/api/api-client.generated.ts TypeScriptVersion:2.0 /Template:Fetch /WrapDtoExceptions:true /TypeStyle:Interface /GenerateClientInterfaces:true"
+    "lint": "eslint src/app",
+    "update-api": "nswag swagger2tsclient /runtime:NetCore31 /Input:'http://localhost:5000/api/\\$spec' /Output:src/app/api/api-client.generated.ts TypeScriptVersion:2.0 /Template:Fetch /WrapDtoExceptions:true /TypeStyle:Interface /GenerateClientInterfaces:true /DateTimeType:MomentJS"
   },
   "author": "MOCODING, LLC",
   "license": "MIT",
   "devDependencies": {
-    "@mocoding/react-app-router-redux-async": "^1.0.0",
-    "@mocoding/react-app": "^1.0.0",
+    "@mocoding/react-app-router-redux-async": "^1.0.1",
+    "@mocoding/react-app": "^1.0.1",
     "@types/applicationinsights-js": "^1.0.9",
     "@types/reactstrap": "^8.4.2",
     "applicationinsights-js": "^1.0.21",
     "autobind-decorator": "^2.4.0",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
     "moment": "^2.25.3",
     "nswag": "^13.5.0",
     "reactstrap": "^8.4.1",
